--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -1,10 +1,9 @@
 <% title 'Organization Details' %>
 
-<h2>Organization Details:</h2>
+<h2><%= @organization.name %></h2>
 
 <table class="table">
   <thead>
-    <th>Name</th>
     <th>Department name</th>
     <th>Division</th>
     <th>Sub Division</th>
@@ -15,7 +14,6 @@
     <th>Questions</th>
   </thead>
   <tr>
-    <td><%= @organization.name %></td>
     <td><%= @organization.department %></td>
     <td><%= @organization.division %></td>
     <td><%= @organization.sub_division %></td>
@@ -27,7 +25,7 @@
   </tr>
 </table>
 
-<h2>Contacts Details:</h2>
+<h3>Contacts Details:</h3>
 
 <table class="table table-bordered table-striped">
   <thead>
@@ -61,5 +59,5 @@
 <div class="btn-toolbar">
   <%= link_to 'Approve', approve_admin_organization_path(@organization), class: 'btn btn-success'  %>
   <%= link_to 'Reject',  reject_admin_organization_path(@organization), class: 'btn btn-danger'  %>
-  <%= link_to 'Back to review applications', admin_organizations_path(status: 'pending_approval'), class: 'btn'  %>
+  <%= link_to 'All Applications', admin_organizations_path, class: 'btn'  %>
 </div>
