Add sidebar text for Thanks page

--- a/app/views/registrations/pending_approval.html.erb
+++ b/app/views/registrations/pending_approval.html.erb
@@ -1,3 +1,8 @@
 <% title 'Thank you for applying' %>
 
+<% content_for :sidebar do -%>
+  <p>The MASAS-X team will review your application. They will be in contact
+  with you within 1-2 business days.</p>
+<% end -%>
+
 <p>Thank you for applying to become a MASAS member.</p>
