Textual changes based on Dougs requests

--- a/app/views/admin/common/_menu.html.erb
+++ b/app/views/admin/common/_menu.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'Masas - Admin', admin_root_path, class: 'brand'  %>
+      <%= link_to 'MASAS-X Admin', admin_root_path, class: 'brand'  %>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
           <% if organization_admin_signed_in? %>
