--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -4,7 +4,7 @@
       <%= render partial: 'common/flashes' %>
       <div class="hero-unit">
         <h1>MASAS-X Registration</h1>
-        <p>A common hub for all location-based, real-time emergency data.</p>
+        <p>Canada's Multi-Agency Situational Awareness System - Information Exchange (MASAS-X)</p>
         <p><%= link_to ('Apply now &raquo').html_safe, registration_path, :class =>'btn btn-primary btn-large' %></p>
       </div>
     </div>
