--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -1,15 +1,11 @@
 <% title 'Primary Contact Information' %>
 
 <% content_for :sidebar do -%>
-  <p>
-  Please provide the Primary Contact information for the Organization making
-  this application. There will be a need to communicate with you during the
-  verification process, so please ensure your contact information is complete
-  and accurate. This contact information will be kept on file for
-  administrative purposes, but does not have to be viewable by other users. If
-  you are the Organization contact that is authorizing the creation of the
-  account (typically an executive) please indicate this.
-  </p>
+  <p>The Primary contact is the person who will have primary responsibility
+  for completing the registration process and administering the account.
+  Correspondence by MASAS-X will be sent to this person. The Primary contact may
+  or may not also be the organization’s Executive Authority for the account. If
+  they are, please check the Executive Authority check box. </p>
 <% end -%>
 
 <%= render partial: 'steps' %>
