--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -1,8 +1,7 @@
 <% title 'Agreements' %>
 
 <% content_for :sidebar do -%>
-  <p>In order to complete your request for access, please review and agree to
-  the following.</p>
+  <p>In order to complete your request for access, your agency must agree to the following.</p>
 <% end -%>
 
 <%= render partial: 'steps' %>
