--- a/app/views/registrations/pending_approval.html.erb
+++ b/app/views/registrations/pending_approval.html.erb
@@ -1,8 +1,11 @@
 <% title 'Thank you for applying' %>
 
 <% content_for :sidebar do -%>
-  <p>The MASAS-X team will review your application. They will be in contact
-  with you within 1-2 business days.</p>
+  <p>Applications are generally processed within three business days of
+  receiving all required information, references and endorsements. If you need
+  to follow up with us, please send an email to 
+  <a href="mailto:support@masas-x.ca">support@masas-x.ca</a>.</p>
 <% end -%>
 
-<p>Thank you for applying to become a MASAS member.</p>
+<p>Your application has been received and a confirmation email has been sent to
+the Primary Contact.</p>
