--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,12 +1,11 @@
 <% title 'Secondary Contact Information' %>
 
 <% content_for :sidebar do -%>
-  <p>
-  Please provide contact details for a Secondary Contact person. This contact
-  information will be kept on file for administrative purposes, but does not
-  have to be viewable by other users. We use this information in the event
-  that we can't reach the Organization's Primary Contact.
-  </p>
+  <p>The Secondary contact may be reached if the Primary contact is
+  non-responsive. The Secondary contact should also be given administrative
+  rights for the account. Additionally, it the Primary contact is not also the
+  organization’s Executive Authority for the account, the Secondary contact
+  should be the Executive Authority.</p>
 <% end -%>
 
 <%= render partial: 'steps' %>
