--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -14,7 +14,9 @@
 
   <%= f.fields_for :primary_organization_administrator do |administrator| %>
 
-    <%= administrator.input :name, label: 'Name' %>
+    <%= administrator.input :first_name, label: 'First Name' %>
+
+    <%= administrator.input :last_name, label: 'Last Name' %>
 
     <%= administrator.input :title, label: 'Title' %>
 
