--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -35,8 +35,7 @@
     <th>First Name</th>
     <th>Last Name</th>
     <th>Title</th>
-    <th>Office e-mail</th>
-    <th>Mobile e-mail</th>
+    <th>E-mail</th>
     <th>Office Phone</th>
     <th>Mobile Phone</th>
     <th>Executive</th>
@@ -51,7 +50,6 @@
         <td><%= administrator.last_name %></td>
         <td><%= administrator.title %></td>
         <td><%= administrator.email %></td>
-        <td><%= administrator.mobile_email %></td>
         <td><%= administrator.office_phone %></td>
         <td><%= administrator.mobile_phone %></td>
         <td><%= administrator.executive ? 'Yes' : 'No' %></td>
