--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -22,9 +22,7 @@
 
     <%= administrator.input :language, label: 'Language', collection: Language.all %>
 
-    <%= administrator.input :email, label: 'Office e-mail' %>
-
-    <%= administrator.input :mobile_email, label: 'Mobile e-mail' %>
+    <%= administrator.input :email, label: 'E-mail' %>
 
     <%= administrator.input :office_phone, label: 'Office Phone' %>
 
