Cannot view an organization once accepted

--- a/app/views/admin/organizations/_organizations.html.erb
+++ b/app/views/admin/organizations/_organizations.html.erb
@@ -13,7 +13,9 @@
         <td><%= organization.status %></td>
         <td>
           <div class="btn-toolbar">
-            <%= link_to 'View', [:admin, organization], class: 'btn btn-primary' %>
+            <% if organization.status == 'pending_approval' %>
+              <%= link_to 'View', [:admin, organization], class: 'btn' %>
+            <% end %>
           </div>
         </td>
       </tr>
