--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -38,7 +38,7 @@
 
     <%= administrator.input :state, label: 'State/Prov' %>
 
-    <%= administrator.input :country, label: 'Country', as: :string %>
+    <%= administrator.input :country, label: 'Country' %>
 
     <%= administrator.input :postal_code, label: 'Postal code' %>
 
