added more state/prov selectors

--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -36,9 +36,11 @@
 
     <%= administrator.input :city, label: 'City' %>
 
-    <%= administrator.input :state, label: 'State/Prov' %>
+    <%= administrator.input :country do %>
+      <%= administrator.country_select :country, {object: administrator.object, prompt: 'Country'} %>
+    <% end %>
 
-    <%= administrator.input :country, label: 'Country' %>
+    <%= render partial: 'subregion_select_primary', locals: {country: administrator.object.country, primary_organization_administrator: administrator} %>
 
     <%= administrator.input :postal_code, label: 'Postal code' %>
 
