--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -32,8 +32,8 @@
 
     <%= administrator.object.country %>
 
-    <%= administrator.input :country do %>
-      <%= administrator.country_select :country, {object: administrator.object, prompt: 'Country'} %>
+    <%= administrator.input :country, label: 'Country' do %>
+      <%= administrator.collection_select :country, country_collection, :code, :name, {object: f.object, priority: %w(CA US), prompt: 'Please select a country'} %>
     <% end %>
 
     <%= administrator.input :address_line_1, label: 'Address Line 1' %>
@@ -42,7 +42,9 @@
 
     <%= administrator.input :city, label: 'City' %>
 
-    <%= render partial: 'subregion_select_primary', locals: {country: administrator.object.country, primary_organization_administrator: administrator} %>
+    <%= administrator.input :state, label: 'State/Prov' do %>
+      <%= administrator.grouped_collection_select :state, country_collection, :subregions, :name, :code, :name, {prompt: "Please select a country above"}, {"data-filtered-by" => "#organization_primary_organization_administrator_attributes_country", "data-filtered-by-prompt" => "Please select a state / province"} %>
+    <% end %>
 
     <%= administrator.input :postal_code, label: 'Postal code' %>
 
