--- a/app/views/registrations/agreement.html.erb
+++ b/app/views/registrations/agreement.html.erb
@@ -1,7 +1,7 @@
-<% title 'Agreements' %>
+<% title 'Agreement' %>
 
 <% content_for :sidebar do -%>
-  <p>In order to complete your request for access, your agency must agree to the following.</p>
+  <p>To proceed with your application please review and agree to following:</p>
 <% end -%>
 
 <%= render partial: 'steps' %>
