--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -1,11 +1,12 @@
 <% title 'Organization Information' %>
 
-<% content_for :sidebar do -%> <p>Access may be granted to the entire
-  organization, a specific department, group, and in
-  some cases a role. Generally, access is not granted to an individual. The
-  information included on this page will be associated with any information
-  shared by this account through MASAS-X, and should not therefore include
-  information of a personal nature.</p> <% end -%>
+<% content_for :sidebar do -%> <p>Organizational Accounts are applied for
+  on behalf of an organization or a group within an organization. With
+  an Organizational Account, account administrators can create and
+  manage one or more Accounts to be used for viewing and posting
+  information to MASAS. Information posted to MASAS is associated to both
+  the Organization that and the individual Account that posted it.</p>
+<% end -%>
 
 <%= render partial: 'steps' %>
 
