--- a/app/views/registrations/primary_contact.html.erb
+++ b/app/views/registrations/primary_contact.html.erb
@@ -1,11 +1,13 @@
 <% title 'Primary Contact Information' %>
 
 <% content_for :sidebar do -%>
-  <p>The Primary contact is the person who will have primary responsibility
-  for completing the registration process and administering the account.
-  Correspondence by MASAS-X will be sent to this person. The Primary contact may
-  or may not also be the organization’s Executive Authority for the account. If
-  they are, please check the Executive Authority check box. </p>
+  <p>
+  During the application process, the Primary Contact is the person who will receive system generated emails and whom may be asked to verify or provide additional information. After account creation, the Primary Contact is the main point of contact for system or account related correspondence.
+  </p>
+
+  <p>
+  Approved Organizational Accounts will include an Account for viewing and posting information to MASAS using the Primary Contact's contact information.
+  </p>
 <% end -%>
 
 <%= render partial: 'steps' %>
