--- a/app/views/registrations/secondary_contact.html.erb
+++ b/app/views/registrations/secondary_contact.html.erb
@@ -1,11 +1,7 @@
 <% title 'Secondary Contact Information' %>
 
 <% content_for :sidebar do -%>
-  <p>The Secondary contact may be reached if the Primary contact is
-  non-responsive. The Secondary contact should also be given administrative
-  rights for the account. Additionally, it the Primary contact is not also the
-  organization’s Executive Authority for the account, the Secondary contact
-  should be the Executive Authority.</p>
+  <p>The Secondary Contact is the back up point of contact for the MASAS Operations team and may receive some system or account related email correspondence.</p>
 <% end -%>
 
 <%= render partial: 'steps' %>
