--- a/app/views/admin/organizations/show.html.erb
+++ b/app/views/admin/organizations/show.html.erb
@@ -92,10 +92,34 @@
 
 </div>
 
+
 <div class="btn-toolbar">
   <% if @organization.can_update_attributes? %>
-    <%= link_to 'Approve', approve_admin_organization_path(@organization), class: 'btn btn-success'  %>
-    <%= link_to 'Reject',  reject_admin_organization_path(@organization), class: 'btn btn-danger'  %>
+    <div class="btn-group dropup">
+      <button class="btn dropdown-toggle" data-toggle="dropdown">
+        Mark as
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <%= link_to "New", mark_as_new_admin_organization_path(@organization) %>
+        </li>
+        <li>
+          <%= link_to "In progress", mark_as_in_progress_admin_organization_path(@organization) %>
+        </li>
+        <li>
+          <%= link_to "On hold", mark_as_on_hold_admin_organization_path(@organization) %>
+        </li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <%= link_to 'Approve', approve_admin_organization_path(@organization), class: 'btn btn-success'  %>
+    </div>
+    <div class="btn-group">
+      <%= link_to 'Reject',  reject_admin_organization_path(@organization), class: 'btn btn-danger'  %>
+    </div>
   <% end %>
-  <%= link_to 'All Applications', admin_organizations_path, class: 'btn'  %>
+  <div class="btn-group">
+    <%= link_to 'All Applications', admin_organizations_path, class: 'btn'  %>
+  </div>
 </div>
