--- a/app/views/masasx_clerk_mailer/new_organization.text.erb
+++ b/app/views/masasx_clerk_mailer/new_organization.text.erb
@@ -1,6 +1,6 @@
 Dear MASAS-X Clerk,
 
-New registration received for orgnaization <%= @organization.name %>.
+New registration received for organization <%= @organization.name %>.
 
 Regards,
 MASAS Applicant Registration System.
