Organizations have emails that it sends to the server

--- a/app/views/registrations/organization.html.erb
+++ b/app/views/registrations/organization.html.erb
@@ -33,6 +33,8 @@
 
   <%= f.input :telephone %>
 
+  <%= f.input :email %>
+
   <%= f.input :website, required: true %>
 
   <div class="form-actions"> <%= link_to 'Previous',
