--- a/app/views/registrations/references.html.erb
+++ b/app/views/registrations/references.html.erb
@@ -11,7 +11,7 @@
 
 <%= simple_form_for @organization, url: next_step_path, method: :put  do |f| %>
 
-  <%= f.input :references, label: 'References', input_html: { class:'xxlarge', rows: 5 }, required: true  %>
+  <%= f.input :references, label: 'References', input_html: { class:'xxlarge', rows: 5 }  %>
 
   <%= f.input :questions, label: 'Comments/Questions', input_html: { class:'xxlarge', rows: 5 }%>
 
